parser/ionizer_parser.go
// Code generated from /Users/bneuenfeldt/Development/source/protogen/Ionizer.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // Ionizer
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'syntax'", "'import'", "'weak'", "'public'", "'package'", "'option'",
	"'repeated'", "'oneof'", "'map'", "'int32'", "'int64'", "'uint32'", "'uint64'",
	"'sint32'", "'sint64'", "'fixed32'", "'fixed64'", "'sfixed32'", "'sfixed64'",
	"'bool'", "'string'", "'double'", "'float'", "'bytes'", "'reserved'", "'to'",
	"'max'", "'enum'", "'message'", "'service'", "'rpc'", "'extensions'", "'stream'",
	"'returns'", "'extend'", "'\"proto3\"'", "''proto3''", "';'", "'='", "'('",
	"')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'.'", "','", "':'", "'+'",
	"'-'",
}
var symbolicNames = []string{
	"", "SYNTAX", "IMPORT", "WEAK", "PUBLIC", "PACKAGE", "OPTION", "REPEATED",
	"ONEOF", "MAP", "INT32", "INT64", "UINT32", "UINT64", "SINT32", "SINT64",
	"FIXED32", "FIXED64", "SFIXED32", "SFIXED64", "BOOL", "STRING", "DOUBLE",
	"FLOAT", "BYTES", "RESERVED", "TO", "MAX", "ENUM", "MESSAGE", "SERVICE",
	"RPC", "EXTENSIONS", "STREAM", "RETURNS", "EXTEND", "PROTO3_LIT_SINGLE",
	"PROTO3_LIT_DOBULE", "SEMI", "EQ", "LP", "RP", "LB", "RB", "LC", "RC",
	"LT", "GT", "DOT", "COMMA", "COLON", "PLUS", "MINUS", "STR_LIT", "BOOL_LIT",
	"FLOAT_LIT", "INT_LIT", "IDENTIFIER", "WS", "LINE_COMMENT", "COMMENT",
}

var ruleNames = []string{
	"proto", "syntax", "importStatement", "packageStatement", "optionStatement",
	"optionName", "optionBody", "optionElement", "field", "fieldOptions", "fieldOption",
	"fieldNumber", "oneof", "oneofField", "mapField", "keyType", "type_", "reserved",
	"extensionStatement", "ranges", "range_", "reservedFieldNames", "topLevelDef",
	"enumDef", "enumBody", "enumElement", "enumField", "enumValueOptions",
	"enumValueOption", "extendDef", "extendBody", "extendElement", "messageDef",
	"messageBody", "messageElement", "serviceDef", "serviceElement", "rpc",
	"constant", "blockLit", "emptyStatement_", "ident", "fullIdent", "messageName",
	"extendName", "enumName", "fieldName", "oneofName", "mapName", "serviceName",
	"rpcName", "messageType", "enumType", "intLit", "strLit", "boolLit", "floatLit",
	"keywords",
}

type IonizerParser struct {
	*antlr.BaseParser
}

// NewIonizerParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *IonizerParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewIonizerParser(input antlr.TokenStream) *IonizerParser {
	this := new(IonizerParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Ionizer.g4"

	return this
}

// IonizerParser tokens.
const (
	IonizerParserEOF               = antlr.TokenEOF
	IonizerParserSYNTAX            = 1
	IonizerParserIMPORT            = 2
	IonizerParserWEAK              = 3
	IonizerParserPUBLIC            = 4
	IonizerParserPACKAGE           = 5
	IonizerParserOPTION            = 6
	IonizerParserREPEATED          = 7
	IonizerParserONEOF             = 8
	IonizerParserMAP               = 9
	IonizerParserINT32             = 10
	IonizerParserINT64             = 11
	IonizerParserUINT32            = 12
	IonizerParserUINT64            = 13
	IonizerParserSINT32            = 14
	IonizerParserSINT64            = 15
	IonizerParserFIXED32           = 16
	IonizerParserFIXED64           = 17
	IonizerParserSFIXED32          = 18
	IonizerParserSFIXED64          = 19
	IonizerParserBOOL              = 20
	IonizerParserSTRING            = 21
	IonizerParserDOUBLE            = 22
	IonizerParserFLOAT             = 23
	IonizerParserBYTES             = 24
	IonizerParserRESERVED          = 25
	IonizerParserTO                = 26
	IonizerParserMAX               = 27
	IonizerParserENUM              = 28
	IonizerParserMESSAGE           = 29
	IonizerParserSERVICE           = 30
	IonizerParserRPC               = 31
	IonizerParserEXTENSIONS        = 32
	IonizerParserSTREAM            = 33
	IonizerParserRETURNS           = 34
	IonizerParserEXTEND            = 35
	IonizerParserPROTO3_LIT_SINGLE = 36
	IonizerParserPROTO3_LIT_DOBULE = 37
	IonizerParserSEMI              = 38
	IonizerParserEQ                = 39
	IonizerParserLP                = 40
	IonizerParserRP                = 41
	IonizerParserLB                = 42
	IonizerParserRB                = 43
	IonizerParserLC                = 44
	IonizerParserRC                = 45
	IonizerParserLT                = 46
	IonizerParserGT                = 47
	IonizerParserDOT               = 48
	IonizerParserCOMMA             = 49
	IonizerParserCOLON             = 50
	IonizerParserPLUS              = 51
	IonizerParserMINUS             = 52
	IonizerParserSTR_LIT           = 53
	IonizerParserBOOL_LIT          = 54
	IonizerParserFLOAT_LIT         = 55
	IonizerParserINT_LIT           = 56
	IonizerParserIDENTIFIER        = 57
	IonizerParserWS                = 58
	IonizerParserLINE_COMMENT      = 59
	IonizerParserCOMMENT           = 60
)

// IonizerParser rules.
const (
	IonizerParserRULE_proto              = 0
	IonizerParserRULE_syntax             = 1
	IonizerParserRULE_importStatement    = 2
	IonizerParserRULE_packageStatement   = 3
	IonizerParserRULE_optionStatement    = 4
	IonizerParserRULE_optionName         = 5
	IonizerParserRULE_optionBody         = 6
	IonizerParserRULE_optionElement      = 7
	IonizerParserRULE_field              = 8
	IonizerParserRULE_fieldOptions       = 9
	IonizerParserRULE_fieldOption        = 10
	IonizerParserRULE_fieldNumber        = 11
	IonizerParserRULE_oneof              = 12
	IonizerParserRULE_oneofField         = 13
	IonizerParserRULE_mapField           = 14
	IonizerParserRULE_keyType            = 15
	IonizerParserRULE_type_              = 16
	IonizerParserRULE_reserved           = 17
	IonizerParserRULE_extensionStatement = 18
	IonizerParserRULE_ranges             = 19
	IonizerParserRULE_range_             = 20
	IonizerParserRULE_reservedFieldNames = 21
	IonizerParserRULE_topLevelDef        = 22
	IonizerParserRULE_enumDef            = 23
	IonizerParserRULE_enumBody           = 24
	IonizerParserRULE_enumElement        = 25
	IonizerParserRULE_enumField          = 26
	IonizerParserRULE_enumValueOptions   = 27
	IonizerParserRULE_enumValueOption    = 28
	IonizerParserRULE_extendDef          = 29
	IonizerParserRULE_extendBody         = 30
	IonizerParserRULE_extendElement      = 31
	IonizerParserRULE_messageDef         = 32
	IonizerParserRULE_messageBody        = 33
	IonizerParserRULE_messageElement     = 34
	IonizerParserRULE_serviceDef         = 35
	IonizerParserRULE_serviceElement     = 36
	IonizerParserRULE_rpc                = 37
	IonizerParserRULE_constant           = 38
	IonizerParserRULE_blockLit           = 39
	IonizerParserRULE_emptyStatement_    = 40
	IonizerParserRULE_ident              = 41
	IonizerParserRULE_fullIdent          = 42
	IonizerParserRULE_messageName        = 43
	IonizerParserRULE_extendName         = 44
	IonizerParserRULE_enumName           = 45
	IonizerParserRULE_fieldName          = 46
	IonizerParserRULE_oneofName          = 47
	IonizerParserRULE_mapName            = 48
	IonizerParserRULE_serviceName        = 49
	IonizerParserRULE_rpcName            = 50
	IonizerParserRULE_messageType        = 51
	IonizerParserRULE_enumType           = 52
	IonizerParserRULE_intLit             = 53
	IonizerParserRULE_strLit             = 54
	IonizerParserRULE_boolLit            = 55
	IonizerParserRULE_floatLit           = 56
	IonizerParserRULE_keywords           = 57
)

// IProtoContext is an interface to support dynamic dispatch.
type IProtoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProtoContext differentiates from other interfaces.
	IsProtoContext()
}

type ProtoContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtoContext() *ProtoContext {
	var p = new(ProtoContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IonizerParserRULE_proto
	return p
}

func (*ProtoContext) IsProtoContext() {}

func NewProtoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtoContext {
	var p = new(ProtoContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IonizerParserRULE_proto

	return p
}

func (s *ProtoContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtoContext) Syntax() ISyntaxContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISyntaxContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISyntaxContext)
}

func (s *ProtoContext) AllImportStatement() []IImportStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportStatementContext)(nil)).Elem())
	var tst = make([]IImportStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportStatementContext)
		}
	}

	return tst
}

func (s *ProtoContext) ImportStatement(i int) IImportStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportStatementContext)
}

func (s *ProtoContext) AllPackageStatement() []IPackageStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IPackageStatementContext)(nil)).Elem())
	var tst = make([]IPackageStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IPackageStatementContext)
		}
	}

	return tst
}

func (s *ProtoContext) PackageStatement(i int) IPackageStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPackageStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IPackageStatementContext)
}

func (s *ProtoContext) AllOptionStatement() []IOptionStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IOptionStatementContext)(nil)).Elem())
	var tst = make([]IOptionStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IOptionStatementContext)
		}
	}

	return tst
}

func (s *ProtoContext) OptionStatement(i int) IOptionStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOptionStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IOptionStatementContext)
}

func (s *ProtoContext) AllTopLevelDef() []ITopLevelDefContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITopLevelDefContext)(nil)).Elem())
	var tst = make([]ITopLevelDefContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITopLevelDefContext)
		}
	}

	return tst
}

func (s *ProtoContext) TopLevelDef(i int) ITopLevelDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITopLevelDefContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITopLevelDefContext)
}

func (s *ProtoContext) AllEmptyStatement_() []IEmptyStatement_Context {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEmptyStatement_Context)(nil)).Elem())
	var tst = make([]IEmptyStatement_Context, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEmptyStatement_Context)
		}
	}

	return tst
}

func (s *ProtoContext) EmptyStatement_(i int) IEmptyStatement_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEmptyStatement_Context)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEmptyStatement_Context)
}

func (s *ProtoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IonizerListener); ok {
		listenerT.EnterProto(s)
	}
}

func (s *ProtoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IonizerListener); ok {
		listenerT.ExitProto(s)
	}
}

func (s *ProtoContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case IonizerVisitor:
		return t.VisitProto(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *IonizerParser) Proto() (localctx IProtoContext) {
	localctx = NewProtoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, IonizerParserRULE_proto)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(116)
		p.Syntax()
	}
	p.SetState(124)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<IonizerParserIMPORT)|(1<<IonizerParserPACKAGE)|(1<<IonizerParserOPTION)|(1<<IonizerParserENUM)|(1<<IonizerParserMESSAGE)|(1<<IonizerParserSERVICE))) != 0) || _la == IonizerParserEXTEND || _la == IonizerParserSEMI {
		p.SetState(122)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case IonizerParserIMPORT:
			{
				p.SetState(117)
				p.ImportStatement()
			}

		case IonizerParserPACKAGE:
			{
				p.SetState(118)
				p.PackageStatement()
			}

		case IonizerParserOPTION:
			{
				p.SetState(119)
				p.OptionStatement()
			}

		case IonizerParserENUM, IonizerParserMESSAGE, IonizerParserSERVICE, IonizerParserEXTEND:
			{
				p.SetState(120)
				p.TopLevelDef()
			}

		case IonizerParserSEMI:
			{
				p.SetState(121)
				p.EmptyStatement_()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(126)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISyntaxContext is an interface to support dynamic dispatch.
type ISyntaxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSyntaxContext differentiates from other interfaces.
	IsSyntaxContext()
}

type SyntaxContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySyntaxContext() *SyntaxContext {
	var p = new(SyntaxContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IonizerParserRULE_syntax
	return p
}

func (*SyntaxContext) IsSyntaxContext() {}

func NewSyntaxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SyntaxContext {
	var p = new(SyntaxContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IonizerParserRULE_syntax

	return p
}

func (s *SyntaxContext) GetParser() antlr.Parser { return s.parser }

func (s *SyntaxContext) SYNTAX() antlr.TerminalNode {
	return s.GetToken(IonizerParserSYNTAX, 0)
}

func (s *SyntaxContext) EQ() antlr.TerminalNode {
	return s.GetToken(IonizerParserEQ, 0)
}

func (s *SyntaxContext) SEMI() antlr.TerminalNode {
	return s.GetToken(IonizerParserSEMI, 0)
}

func (s *SyntaxContext) PROTO3_LIT_SINGLE() antlr.TerminalNode {
	return s.GetToken(IonizerParserPROTO3_LIT_SINGLE, 0)
}

func (s *SyntaxContext) PROTO3_LIT_DOBULE() antlr.TerminalNode {
	return s.GetToken(IonizerParserPROTO3_LIT_DOBULE, 0)
}

func (s *SyntaxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SyntaxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SyntaxContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IonizerListener); ok {
		listenerT.EnterSyntax(s)
	}
}

func (s *SyntaxContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IonizerListener); ok {
		listenerT.ExitSyntax(s)
	}
}

func (s *SyntaxContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case IonizerVisitor:
		return t.VisitSyntax(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *IonizerParser) Syntax() (localctx ISyntaxContext) {
	localctx = NewSyntaxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, IonizerParserRULE_syntax)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(127)
		p.Match(IonizerParserSYNTAX)
	}
	{
		p.SetState(128)
		p.Match(IonizerParserEQ)
	}
	{
		p.SetState(129)
		_la = p.GetTokenStream().LA(1)

		if !(_la == IonizerParserPROTO3_LIT_SINGLE || _la == IonizerParserPROTO3_LIT_DOBULE) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(130)
		p.Match(IonizerParserSEMI)
	}

	return localctx
}

// IImportStatementContext is an interface to support dynamic dispatch.
type IImportStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportStatementContext differentiates from other interfaces.
	IsImportStatementContext()
}

type ImportStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStatementContext() *ImportStatementContext {
	var p = new(ImportStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IonizerParserRULE_importStatement
	return p
}

func (*ImportStatementContext) IsImportStatementContext() {}

func NewImportStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStatementContext {
	var p = new(ImportStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IonizerParserRULE_importStatement

	return p
}

func (s *ImportStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStatementContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(IonizerParserIMPORT, 0)
}

func (s *ImportStatementContext) StrLit() IStrLitContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStrLitContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStrLitContext)
}

func (s *ImportStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(IonizerParserSEMI, 0)
}

func (s *ImportStatementContext) WEAK() antlr.TerminalNode {
	return s.GetToken(IonizerParserWEAK, 0)
}

func (s *ImportStatementContext) PUBLIC() antlr.TerminalNode {
	return s.GetToken(IonizerParserPUBLIC, 0)
}

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IonizerListener); ok {
		listenerT.EnterImportStatement(s)
	}
}

func (s *ImportStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IonizerListener); ok {
		listenerT.ExitImportStatement(s)
	}
}

func (s *ImportStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case IonizerVisitor:
		return t.VisitImportStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *IonizerParser) ImportStatement() (localctx IImportStatementContext) {
	localctx = NewImportStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, IonizerParserRULE_importStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(132)
		p.Match(IonizerParserIMPORT)
	}
	p.SetState(134)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == IonizerParserWEAK || _la == IonizerParserPUBLIC {
		{
			p.SetState(133)
			_la = p.GetTokenStream().LA(1)

			if !(_la == IonizerParserWEAK || _la == IonizerParserPUBLIC) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	}
	{
		p.SetState(136)
		p.StrLit()
	}
	{
		p.SetState(137)
		p.Match(IonizerParserSEMI)
	}

	return localctx
}

// IPackageStatementContext is an interface to support dynamic dispatch.
type IPackageStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
